// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`batch request serializer serializeBatchRequest serializes payload for batch subrequests 1`] = `
"--batch_fixed_boundary_for_testing
Content-Type: multipart/mixed; boundary=changeSet_boundary

--changeSet_boundary
Content-Type: application/http
Content-Transfer-Encoding: binary
Content-Id: <content-id>

POST /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity HTTP/1.1
Content-Type: application/json
Accept: application/json

{\\"KeyPropertyGuid\\":\\"guidId\\",\\"KeyPropertyString\\":\\"strId\\",\\"StringProperty\\":\\"value\\"}

--changeSet_boundary--
--batch_fixed_boundary_for_testing
Content-Type: application/http
Content-Transfer-Encoding: binary

GET /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity HTTP/1.1
Content-Type: application/json
Accept: application/json


--batch_fixed_boundary_for_testing
Content-Type: multipart/mixed; boundary=changeSet_boundary

--changeSet_boundary
Content-Type: application/http
Content-Transfer-Encoding: binary
Content-Id: <content-id>

PATCH /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity(KeyPropertyGuid=guidId,KeyPropertyString='strId') HTTP/1.1
Content-Type: application/json
Accept: application/json

{\\"StringProperty\\":\\"value\\"}

--changeSet_boundary
Content-Type: application/http
Content-Transfer-Encoding: binary
Content-Id: <content-id>

DELETE /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity(KeyPropertyGuid=testId,KeyPropertyString='test') HTTP/1.1
Content-Type: application/json
Accept: application/json



--changeSet_boundary--
--batch_fixed_boundary_for_testing
Content-Type: application/http
Content-Transfer-Encoding: binary

GET /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity(KeyPropertyGuid=testId,KeyPropertyString='test') HTTP/1.1
Content-Type: application/json
Accept: application/json


--batch_fixed_boundary_for_testing--
"
`;

exports[`batch request serializer serializeChangeSet serializes change set with multiple operations 1`] = `
"Content-Type: multipart/mixed; boundary=changeSet_boundary

--changeSet_boundary
Content-Type: application/http
Content-Transfer-Encoding: binary
Content-Id: <content-id>

PATCH /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity(KeyPropertyGuid=guidId,KeyPropertyString='strId') HTTP/1.1
Content-Type: application/json
Accept: application/json

{\\"StringProperty\\":\\"value\\"}

--changeSet_boundary
Content-Type: application/http
Content-Transfer-Encoding: binary
Content-Id: <content-id>

POST /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity HTTP/1.1
Content-Type: application/json
Accept: application/json

{\\"KeyPropertyGuid\\":\\"guidId\\",\\"KeyPropertyString\\":\\"strId\\",\\"StringProperty\\":\\"value\\"}

--changeSet_boundary--"
`;

exports[`batch request serializer serializeChangeSet serializes change set with one operation 1`] = `
"Content-Type: multipart/mixed; boundary=changeSet_boundary

--changeSet_boundary
Content-Type: application/http
Content-Transfer-Encoding: binary
Content-Id: <content-id>

POST /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity HTTP/1.1
Content-Type: application/json
Accept: application/json

{\\"KeyPropertyGuid\\":\\"guidId\\",\\"KeyPropertyString\\":\\"strId\\",\\"StringProperty\\":\\"value\\"}

--changeSet_boundary--"
`;

exports[`batch request serializer serializeRequest serializes create request 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary
Content-Id: <content-id>

POST /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity HTTP/1.1
Content-Type: application/json
Accept: application/json

{\\"KeyPropertyGuid\\":\\"guidId\\",\\"KeyPropertyString\\":\\"strId\\",\\"StringProperty\\":\\"value\\"}
"
`;

exports[`batch request serializer serializeRequest serializes delete request with eTag 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary
Content-Id: <content-id>

DELETE /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity(KeyPropertyGuid=guidId,KeyPropertyString='strId') HTTP/1.1
Content-Type: application/json
Accept: application/json
Some-Implementation-For-Test: eTag


"
`;

exports[`batch request serializer serializeRequest serializes delete request with entity 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary
Content-Id: <content-id>

DELETE /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity(KeyPropertyGuid=guidId,KeyPropertyString='strId') HTTP/1.1
Content-Type: application/json
Accept: application/json


"
`;

exports[`batch request serializer serializeRequest serializes delete request with id 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary
Content-Id: <content-id>

DELETE /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity(KeyPropertyGuid=testId,KeyPropertyString='test') HTTP/1.1
Content-Type: application/json
Accept: application/json


"
`;

exports[`batch request serializer serializeRequest serializes getAll request 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary

GET /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity HTTP/1.1
Content-Type: application/json
Accept: application/json

"
`;

exports[`batch request serializer serializeRequest serializes getAll request with absolute sub request path 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary

GET http://example.com/sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity HTTP/1.1
Content-Type: application/json
Accept: application/json

"
`;

exports[`batch request serializer serializeRequest serializes getAll request with custom headers 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary

GET /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity HTTP/1.1
Content-Type: application/json
Accept: application/json
Custom-Header: custom

"
`;

exports[`batch request serializer serializeRequest serializes getAll request with entity relative sub request path 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary

GET /A_CommonEntity HTTP/1.1
Content-Type: application/json
Accept: application/json

"
`;

exports[`batch request serializer serializeRequest serializes getAll request with filter 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary

GET /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity?$filter=(StringProperty%20eq%20'test') HTTP/1.1
Content-Type: application/json
Accept: application/json

"
`;

exports[`batch request serializer serializeRequest serializes getByKey request 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary

GET /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity(KeyPropertyGuid=testId,KeyPropertyString='test') HTTP/1.1
Content-Type: application/json
Accept: application/json

"
`;

exports[`batch request serializer serializeRequest serializes update request 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary
Content-Id: <content-id>

PATCH /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity(KeyPropertyGuid=guidId,KeyPropertyString='strId') HTTP/1.1
Content-Type: application/json
Accept: application/json

{\\"StringProperty\\":\\"value\\"}
"
`;

exports[`batch request serializer serializeRequest serializes update request using put 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary
Content-Id: <content-id>

PUT /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity(KeyPropertyGuid=guidId,KeyPropertyString='strId') HTTP/1.1
Content-Type: application/json
Accept: application/json

{\\"KeyPropertyGuid\\":\\"guidId\\",\\"KeyPropertyString\\":\\"strId\\",\\"StringProperty\\":\\"value\\"}
"
`;
